@@ -1,1 +1,0 @@
-bin/be @PREFIX@/bin/be@PYVERSSUFFIX@
