@@ -1,201 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2014/08/09 21:57:14 wiz Exp $
-bin/be${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_FILE}
-${PYSITELIB}/libbe/__init__.py
-${PYSITELIB}/libbe/__init__.pyc
-${PYSITELIB}/libbe/__init__.pyo
-${PYSITELIB}/libbe/_version.py
-${PYSITELIB}/libbe/_version.pyc
-${PYSITELIB}/libbe/_version.pyo
-${PYSITELIB}/libbe/bug.py
-${PYSITELIB}/libbe/bug.pyc
-${PYSITELIB}/libbe/bug.pyo
-${PYSITELIB}/libbe/bugdir.py
-${PYSITELIB}/libbe/bugdir.pyc
-${PYSITELIB}/libbe/bugdir.pyo
-${PYSITELIB}/libbe/command/__init__.py
-${PYSITELIB}/libbe/command/__init__.pyc
-${PYSITELIB}/libbe/command/__init__.pyo
-${PYSITELIB}/libbe/command/assign.py
-${PYSITELIB}/libbe/command/assign.pyc
-${PYSITELIB}/libbe/command/assign.pyo
-${PYSITELIB}/libbe/command/base.py
-${PYSITELIB}/libbe/command/base.pyc
-${PYSITELIB}/libbe/command/base.pyo
-${PYSITELIB}/libbe/command/comment.py
-${PYSITELIB}/libbe/command/comment.pyc
-${PYSITELIB}/libbe/command/comment.pyo
-${PYSITELIB}/libbe/command/commit.py
-${PYSITELIB}/libbe/command/commit.pyc
-${PYSITELIB}/libbe/command/commit.pyo
-${PYSITELIB}/libbe/command/depend.py
-${PYSITELIB}/libbe/command/depend.pyc
-${PYSITELIB}/libbe/command/depend.pyo
-${PYSITELIB}/libbe/command/diff.py
-${PYSITELIB}/libbe/command/diff.pyc
-${PYSITELIB}/libbe/command/diff.pyo
-${PYSITELIB}/libbe/command/due.py
-${PYSITELIB}/libbe/command/due.pyc
-${PYSITELIB}/libbe/command/due.pyo
-${PYSITELIB}/libbe/command/help.py
-${PYSITELIB}/libbe/command/help.pyc
-${PYSITELIB}/libbe/command/help.pyo
-${PYSITELIB}/libbe/command/html.py
-${PYSITELIB}/libbe/command/html.pyc
-${PYSITELIB}/libbe/command/html.pyo
-${PYSITELIB}/libbe/command/import_xml.py
-${PYSITELIB}/libbe/command/import_xml.pyc
-${PYSITELIB}/libbe/command/import_xml.pyo
-${PYSITELIB}/libbe/command/init.py
-${PYSITELIB}/libbe/command/init.pyc
-${PYSITELIB}/libbe/command/init.pyo
-${PYSITELIB}/libbe/command/list.py
-${PYSITELIB}/libbe/command/list.pyc
-${PYSITELIB}/libbe/command/list.pyo
-${PYSITELIB}/libbe/command/merge.py
-${PYSITELIB}/libbe/command/merge.pyc
-${PYSITELIB}/libbe/command/merge.pyo
-${PYSITELIB}/libbe/command/new.py
-${PYSITELIB}/libbe/command/new.pyc
-${PYSITELIB}/libbe/command/new.pyo
-${PYSITELIB}/libbe/command/remove.py
-${PYSITELIB}/libbe/command/remove.pyc
-${PYSITELIB}/libbe/command/remove.pyo
-${PYSITELIB}/libbe/command/serve_commands.py
-${PYSITELIB}/libbe/command/serve_commands.pyc
-${PYSITELIB}/libbe/command/serve_commands.pyo
-${PYSITELIB}/libbe/command/serve_storage.py
-${PYSITELIB}/libbe/command/serve_storage.pyc
-${PYSITELIB}/libbe/command/serve_storage.pyo
-${PYSITELIB}/libbe/command/set.py
-${PYSITELIB}/libbe/command/set.pyc
-${PYSITELIB}/libbe/command/set.pyo
-${PYSITELIB}/libbe/command/severity.py
-${PYSITELIB}/libbe/command/severity.pyc
-${PYSITELIB}/libbe/command/severity.pyo
-${PYSITELIB}/libbe/command/show.py
-${PYSITELIB}/libbe/command/show.pyc
-${PYSITELIB}/libbe/command/show.pyo
-${PYSITELIB}/libbe/command/status.py
-${PYSITELIB}/libbe/command/status.pyc
-${PYSITELIB}/libbe/command/status.pyo
-${PYSITELIB}/libbe/command/subscribe.py
-${PYSITELIB}/libbe/command/subscribe.pyc
-${PYSITELIB}/libbe/command/subscribe.pyo
-${PYSITELIB}/libbe/command/tag.py
-${PYSITELIB}/libbe/command/tag.pyc
-${PYSITELIB}/libbe/command/tag.pyo
-${PYSITELIB}/libbe/command/target.py
-${PYSITELIB}/libbe/command/target.pyc
-${PYSITELIB}/libbe/command/target.pyo
-${PYSITELIB}/libbe/command/util.py
-${PYSITELIB}/libbe/command/util.pyc
-${PYSITELIB}/libbe/command/util.pyo
-${PYSITELIB}/libbe/comment.py
-${PYSITELIB}/libbe/comment.pyc
-${PYSITELIB}/libbe/comment.pyo
-${PYSITELIB}/libbe/diff.py
-${PYSITELIB}/libbe/diff.pyc
-${PYSITELIB}/libbe/diff.pyo
-${PYSITELIB}/libbe/error.py
-${PYSITELIB}/libbe/error.pyc
-${PYSITELIB}/libbe/error.pyo
-${PYSITELIB}/libbe/storage/__init__.py
-${PYSITELIB}/libbe/storage/__init__.pyc
-${PYSITELIB}/libbe/storage/__init__.pyo
-${PYSITELIB}/libbe/storage/base.py
-${PYSITELIB}/libbe/storage/base.pyc
-${PYSITELIB}/libbe/storage/base.pyo
-${PYSITELIB}/libbe/storage/http.py
-${PYSITELIB}/libbe/storage/http.pyc
-${PYSITELIB}/libbe/storage/http.pyo
-${PYSITELIB}/libbe/storage/util/__init__.py
-${PYSITELIB}/libbe/storage/util/__init__.pyc
-${PYSITELIB}/libbe/storage/util/__init__.pyo
-${PYSITELIB}/libbe/storage/util/config.py
-${PYSITELIB}/libbe/storage/util/config.pyc
-${PYSITELIB}/libbe/storage/util/config.pyo
-${PYSITELIB}/libbe/storage/util/mapfile.py
-${PYSITELIB}/libbe/storage/util/mapfile.pyc
-${PYSITELIB}/libbe/storage/util/mapfile.pyo
-${PYSITELIB}/libbe/storage/util/properties.py
-${PYSITELIB}/libbe/storage/util/properties.pyc
-${PYSITELIB}/libbe/storage/util/properties.pyo
-${PYSITELIB}/libbe/storage/util/settings_object.py
-${PYSITELIB}/libbe/storage/util/settings_object.pyc
-${PYSITELIB}/libbe/storage/util/settings_object.pyo
-${PYSITELIB}/libbe/storage/util/upgrade.py
-${PYSITELIB}/libbe/storage/util/upgrade.pyc
-${PYSITELIB}/libbe/storage/util/upgrade.pyo
-${PYSITELIB}/libbe/storage/vcs/__init__.py
-${PYSITELIB}/libbe/storage/vcs/__init__.pyc
-${PYSITELIB}/libbe/storage/vcs/__init__.pyo
-${PYSITELIB}/libbe/storage/vcs/arch.py
-${PYSITELIB}/libbe/storage/vcs/arch.pyc
-${PYSITELIB}/libbe/storage/vcs/arch.pyo
-${PYSITELIB}/libbe/storage/vcs/base.py
-${PYSITELIB}/libbe/storage/vcs/base.pyc
-${PYSITELIB}/libbe/storage/vcs/base.pyo
-${PYSITELIB}/libbe/storage/vcs/bzr.py
-${PYSITELIB}/libbe/storage/vcs/bzr.pyc
-${PYSITELIB}/libbe/storage/vcs/bzr.pyo
-${PYSITELIB}/libbe/storage/vcs/darcs.py
-${PYSITELIB}/libbe/storage/vcs/darcs.pyc
-${PYSITELIB}/libbe/storage/vcs/darcs.pyo
-${PYSITELIB}/libbe/storage/vcs/git.py
-${PYSITELIB}/libbe/storage/vcs/git.pyc
-${PYSITELIB}/libbe/storage/vcs/git.pyo
-${PYSITELIB}/libbe/storage/vcs/hg.py
-${PYSITELIB}/libbe/storage/vcs/hg.pyc
-${PYSITELIB}/libbe/storage/vcs/hg.pyo
-${PYSITELIB}/libbe/storage/vcs/monotone.py
-${PYSITELIB}/libbe/storage/vcs/monotone.pyc
-${PYSITELIB}/libbe/storage/vcs/monotone.pyo
-${PYSITELIB}/libbe/ui/__init__.py
-${PYSITELIB}/libbe/ui/__init__.pyc
-${PYSITELIB}/libbe/ui/__init__.pyo
-${PYSITELIB}/libbe/ui/command_line.py
-${PYSITELIB}/libbe/ui/command_line.pyc
-${PYSITELIB}/libbe/ui/command_line.pyo
-${PYSITELIB}/libbe/ui/util/__init__.py
-${PYSITELIB}/libbe/ui/util/__init__.pyc
-${PYSITELIB}/libbe/ui/util/__init__.pyo
-${PYSITELIB}/libbe/ui/util/editor.py
-${PYSITELIB}/libbe/ui/util/editor.pyc
-${PYSITELIB}/libbe/ui/util/editor.pyo
-${PYSITELIB}/libbe/ui/util/pager.py
-${PYSITELIB}/libbe/ui/util/pager.pyc
-${PYSITELIB}/libbe/ui/util/pager.pyo
-${PYSITELIB}/libbe/ui/util/user.py
-${PYSITELIB}/libbe/ui/util/user.pyc
-${PYSITELIB}/libbe/ui/util/user.pyo
-${PYSITELIB}/libbe/util/__init__.py
-${PYSITELIB}/libbe/util/__init__.pyc
-${PYSITELIB}/libbe/util/__init__.pyo
-${PYSITELIB}/libbe/util/encoding.py
-${PYSITELIB}/libbe/util/encoding.pyc
-${PYSITELIB}/libbe/util/encoding.pyo
-${PYSITELIB}/libbe/util/http.py
-${PYSITELIB}/libbe/util/http.pyc
-${PYSITELIB}/libbe/util/http.pyo
-${PYSITELIB}/libbe/util/id.py
-${PYSITELIB}/libbe/util/id.pyc
-${PYSITELIB}/libbe/util/id.pyo
-${PYSITELIB}/libbe/util/plugin.py
-${PYSITELIB}/libbe/util/plugin.pyc
-${PYSITELIB}/libbe/util/plugin.pyo
-${PYSITELIB}/libbe/util/subproc.py
-${PYSITELIB}/libbe/util/subproc.pyc
-${PYSITELIB}/libbe/util/subproc.pyo
-${PYSITELIB}/libbe/util/tree.py
-${PYSITELIB}/libbe/util/tree.pyc
-${PYSITELIB}/libbe/util/tree.pyo
-${PYSITELIB}/libbe/util/utility.py
-${PYSITELIB}/libbe/util/utility.pyc
-${PYSITELIB}/libbe/util/utility.pyo
-${PYSITELIB}/libbe/util/wsgi.py
-${PYSITELIB}/libbe/util/wsgi.pyc
-${PYSITELIB}/libbe/util/wsgi.pyo
-${PYSITELIB}/libbe/version.py
-${PYSITELIB}/libbe/version.pyc
-${PYSITELIB}/libbe/version.pyo
